2007-10-25  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_record::TYPE): Delete trailing comma in enum decl.

	* ov-base.h (DECLARE_OV_TYPEID_FUNCTIONS_AND_DATA): Use
	OCTAVE_EMPTY_CPP_ARG to avoid annoying Sun compiler warning.

	* Makefile.in (graphics.h): Use $(AWK) instead of awk.

	* DLD-FUNCTIONS/time.cc (Ftime, Fmktime): Avoid unnecessary cast.

	* data.cc (Ftic, Ftoc): Call double_value on octave_time objects
	instead of relying on conversion operator.
	* ov.cc (octave_value::octave_value (octave_time)): Likewise.

	* variables.cc (symbol_out_of_date): Use explicit conversion to
	time_t instead of relying on conversion operator.
	* ov-fcn-handle.cc (octave_fcn_handle::subsref): Likewise.

	* data.cc (tic_toc_timestamp): Rename from __tic_toc_timestamp__.
	Change all uses.

2007-10-24  David Bateman  <dbateman@free.fr>

	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::OCTAVE_VALUE_INT_MATRIX_T
	(const ArrayN<OCTAVE_INT_T>&)): New constructor.
	* ov.cc (octave_value::octave_value(const ArrayN<T>) with T being
	octave_int8, octave_uint8, octave_int16, octave_uint16,
	octave_int32, octave_uint32, octave_int64, octave_uint64): New
	constructors.
	* ov.h (octave_value::octave_value(const ArrayN<T>) with T being
	octave_int8, octave_uint8, octave_int16, octave_uint16,
	octave_int32, octave_uint32, octave_int64, octave_uint64):
	Declare them.
	* DLD-FUNCTIONS/sort.cc (template class octave_sort<T>,
	template class vec_index<T>, template class
	octave_sort<vec_index<T> *>,  with T being
	octave_int8, octave_uint8, octave_int16, octave_uint16,
	octave_int32, octave_uint32, octave_int64, octave_uint64): New
	instantiations of sort template classes.
	(Fsort): Use them.

2007-10-24  John W. Eaton  <jwe@octave.org>

	* graphics.cc (root_figure::properties::set_currentfigure):
	Allow currentfigure to be NaN.

	* pt-idx.cc (tree_index_expression::lvalue): Correctly compute
	number of elements in lvalue expression when last indexing
	element is ".".
